# fastapi-dbbackup

./: .gitignore  MANIFEST.in  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: cli.md  configuration.md  docker.md  engines.md  index.md  installation.md  storage.md
fastapi_dbbackup/: base.py  cli.py  compress.py  config.py  detector.py  retention.py
fastapi_dbbackup/engines/: mysql.py  postgres.py  sqlite.py
fastapi_dbbackup/storage/: base.py  local.py  s3.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/cli/: index.html
site/configuration/: index.html
site/engines/: index.html
site/installation/: index.html
site/search/: search_index.json
site/storage/: index.html
tests/: conftest.py  test_compress.py  test_detector.py  test_sqlite_backup.py  test_storage_s3.py
